refactor(catalog): 文献详情 去 FQN + List.of + 补 isOa 断言 (PAP-42)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>